--- a/sprint-2/styles/partials/_gallery.scss
+++ b/sprint-2/styles/partials/_gallery.scss
@@ -1,6 +1,6 @@
 .gallery {
     padding: 0 5%;
-    background-color: $mercury;
+    
     &__heading {
         padding-top:32px;
         font-family: AvenirBold;
