--- a/sprint-2/styles/partials/_navbar.scss
+++ b/sprint-2/styles/partials/_navbar.scss
@@ -62,7 +62,8 @@
            }
             &-logo {
                 padding: 0;
-                margin: auto 0;
+                margin: auto 28px auto 0;
+        
            }
        }
    }
